@@ -294,12 +294,12 @@ __sfr __at (0xfff) TOSU;
 
 
 /* for compatibility reasons */
-__sfr __at (0xfab) RCSTA1;
-volatile __RCSTA1bits_t __at (0xfab) RCSTA1bits;
+__sfr __at (0xfab) RCSTA;
+volatile __RCSTA1bits_t __at (0xfab) RCSTAbits;
 
-__sfr __at (0xfac) TXSTA1;
-volatile __TXSTA1bits_t __at (0xfac) TXSTA1bits;
+__sfr __at (0xfac) TXSTA;
+volatile __TXSTA1bits_t __at (0xfac) TXSTAbits;
 
-__sfr __at (0xfad) TXREG1;
-__sfr __at (0xfae) RCREG1;
-__sfr __at (0xfaf) SPBRG1;
+__sfr __at (0xfad) TXREG;
+__sfr __at (0xfae) RCREG;
+__sfr __at (0xfaf) SPBRG;
